@@ -17,6 +17,12 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+February 16, 2015  G.Cosmo               geom-csg-V10-00-07
+- Fixed typo in copy-ctor and assignment operator for G4Tubs and G4OTubs.
+
+December 5, 2014  G.Cosmo
+- Fix in temporary class G4OTubs to include symbol in library in any case.
+
 September 17, 2014  G.Cosmo              geom-csg-V10-00-06
 - Added wrapper for UTrap shape; adapted switch to original G4Trap accordingly.
   Requires tag "geom-usolids-V10-00-16".
